--- a/src/body.css
+++ b/src/body.css
@@ -1,21 +1,37 @@
-.App-project {
-	background-color: #000;
-	height: 25px;
-	padding: 20px;
-	overflow: hidden;
+.project-title {
+	background-color: #FF4500;
+	padding: 2px 0px 2px 15px;
+	border-bottom: gray 3px solid;
 }
 
-.App-project-title {
-	background-color: #ffb366;
-	height: 25px;
-	padding: 20px;
+.each-project {
+	background-color: #d580ff;
+	min-height: 225px;
+}
+
+.project-info {
+	width: 30%;
+	font-size: 12px;
+	display: inline-block;
+	margin-right: 10px;
+	padding-left: 15px;
+}
+
+.picture {
+	width: 65%;
+	height: 195px;
+	display: inline-block;
+	background-color: #e6b3ff;
+}
+
+.live {
+	margin-top: 110px;
 	float: left;
-	width: 30%;	
+	text-decoration: none;
 }
 
-.App-project-info {
-	background-color: #aaff80;
-	padding: 20px;
-	/*float: right;*/
-
+.source {
+	margin-top: 110px;
+	float: right;
+	text-decoration: none;
 }
