--- a/src/header.css
+++ b/src/header.css
@@ -1,7 +1,26 @@
-.App-header {
-  background-color: #ff4d4d;
-  height: 50px;
+.header {
+  background-color: #373F51;
+  height: 30px;
   padding: 20px;
   color: white;
-  text-align: center;
+  font-family: Tahoma;
+  font-size: 26px;
+  text-align: left;
+}
+
+.header-links {
+	float: right;
+	padding-right: 10px;
+	font-size: 14px;
+	margin-top: 10px;
+}
+
+nav ul {
+	padding: 0;
+	margin: 0;
+}
+
+nav li {
+ 	display: inline;
+ 	padding: 0 20px 0 20px;
 }
