--- a/src/about.css
+++ b/src/about.css
@@ -1,18 +1,23 @@
 .about {
-  	background-color: #A9BCD0;
+  	background-color: #4d94ff;
 }
 
 .about-title {
-	padding: 20px;
-	background-color: #373F51;
-	color: white;
-	font-size: 30px;
+	padding: 10px 0 10px 0;
+	background-color: #ff751a; 
+	border-bottom: #373F51 3px solid;
+}
+
+#about-land {
+	font-size: 22px;
 	font-weight: 100;
-	border-bottom: #ff751a 3px solid;
+	color: black;
+	padding-left: 20px;
 }
 
 .about-body {
 	font-size: 14px;
 	font-weight: 100;
-	padding: 0px 10px 20px 10px;
+	padding: 0px 10px 30px 10px;
+	text-align: center;
 }
