--- a/src/body.css
+++ b/src/body.css
@@ -1,51 +1,48 @@
 .project-header {
 	background-color: #ff751a;
-	padding: 2px 0px 2px 15px;
+	padding-left: 20px;
 	border-bottom: #373F51 3px solid;
 	font-size: 22px;
 	font-weight: 100;
 }
 
+#header-title {
+	padding-top: 10px;
+	margin-bottom: 10px;
+}
+
 .each-project {
-	background-color: #d580ff;
-	min-height: 225px;
+	min-height: 150px;
 	width: 100%;
 }
 
 .each-title {
-	font-size: 20px;
-	padding: 10px 0 10px 0;
+	font-size: 16px;
+	font-weight: 200;
+	padding: 10px 0 10px 10px;
+	margin-left: 10px;
+}
+
+#project-link {
+	text-decoration: none;
+	color: white;
 }
 
 .project-description {
-	/*width: 30%;*/
-	font-size: 12px;
+	font-size: 14px;
 	font-weight: 100;
 	margin-right: 10px;
 	padding-left: 15px;
+	text-align: center;
 }
 
-.live {
-	margin-top: 110px;
-	float: left;
-	text-decoration: none;
-	color: white;
-	font-size: 12px;
-	font-weight: 100;
-}
 
 .source {
-	margin-top: 110px;
-	float: left;
+	margin-top: 50px;
 	text-decoration: none;
 	color: white;
 	font-size: 12px;
 	font-weight: 100;
-}
-
-.picture {
-	/*width: 65%;*/
-	height: 195px;
-	/*float: right;*/
-	background-color: #e6b3ff;
+	margin-left: 21px;
+	float: left;
 }
