--- a/src/header.css
+++ b/src/header.css
@@ -15,6 +15,13 @@
 	margin-top: 10px;
 }
 
+.links {
+	color: white;
+	text-decoration: none;
+	font-size: 14px;
+	margin-top: 10px;
+}
+
 nav ul {
 	padding: 0;
 	margin: 0;
