--- a/src/header.css
+++ b/src/header.css
@@ -1,7 +1,8 @@
 .header {
   background-color: #373F51;
-  height: 30px;
-  padding: 20px;
+  /*height: 30px;*/
+  min-height: 70px;
+  padding: 20px 20px 0px 20px;
   color: white;
   font-family: Tahoma;
   font-size: 26px;
@@ -12,7 +13,7 @@
 	float: right;
 	padding-right: 10px;
 	font-size: 14px;
-	margin-top: 10px;
+	margin-top: 8px;
 }
 
 .links {
