--- a/src/header.css
+++ b/src/header.css
@@ -1,10 +1,9 @@
 .header {
   background-color: #373F51;
-  /*height: 30px;*/
   min-height: 70px;
   padding: 20px 20px 0px 20px;
   color: white;
-  font-family: Tahoma;
+  font-family: Arial;
   font-size: 26px;
   text-align: left;
 }
@@ -19,7 +18,6 @@
 .links {
 	color: white;
 	text-decoration: none;
-	font-size: 14px;
 	margin-top: 10px;
 }
 
