--- a/src/about.css
+++ b/src/about.css
@@ -1,22 +1,19 @@
-.about {
-  	background-color: #80b3ff;
+.about-main {
+  	/*background-color: #80b3ff;*/
 }
 
 .about-title {
-	padding: 10px 0 10px 0;
-	background-color: #ff751a; 
-	border-bottom: #373F51 3px solid;
-}
-
-#about-land {
+	/*background-color: #ff751a; */
+	text-align: center;
+	/*padding-top: 20px;*/
 	font-size: 22px;
-	font-weight: 100;
+	font-weight: 600;
 	color: black;
 	padding-left: 20px;
+	/*border-bottom: #373F51 3px solid;*/
 }
 
 .about-body {
 	font-size: 14px;
-	font-weight: 100;
 	padding: 0px 30px 30px 30px;
 }
