--- a/src/body.css
+++ b/src/body.css
@@ -1,43 +1,56 @@
+.body-main {
+	/*margin-top: 45px;*/
+	background-color: #b3e0ff;
+/*	padding: 0 0 20px 0; */
+/*#b3d1ff;*/
+	/*#99c2ff;*/
+}
+
 .project-header {
-	background-color: #ff751a;
-	padding-left: 20px;
-	border-bottom: #373F51 3px solid;
+	text-align: center;
 	font-size: 22px;
-	font-weight: 100;
+/*	background-color: #ff751a;*/	
+	/*padding-left: 20px;*/
+/*	border-bottom: #373F51 3px solid;*/	
+	/*margin-bottom: 10px;*/
 }
 
 #header-title {
-	padding-top: 10px;
-	margin-bottom: 10px;
+	font-weight: 600;
 }
 
 .each-project {
 	min-height: 135px;
-	width: 100%;
+	/*width: 100%;*/
 }
 
 .each-title {
 	font-size: 16px;
-	font-weight: 200;
-	padding: 10px 0 5px 10px;
-	margin-left: 10px;
+	font-weight: 400;
+	padding: 10px 0 5px 20px;
+	/*margin-left: 10px;*/
 }
 
 .each-link {
 	text-decoration: none;
-	color: white;
+	color: black;
 }
 
 .each-description {
 	font-size: 14px;
-	font-weight: 100;
-	padding: 0px 35px 0px 35px;
+	text-align: center;
+	padding: 0px 55px 0px 55px;
 }
 
 .each-source {
+	color: black;
 	margin-left: 21px;
 	text-decoration: none;
-	color: white;
 	font-size: 12px;
-	font-weight: 100;
 }
+
+/*#line {
+	width: 500px;
+	margin: auto;
+	border-top: 1px solid black;
+}*/
