--- a/src/footer.css
+++ b/src/footer.css
@@ -1,9 +1,8 @@
-.footer {
+.footer-main {
 	padding: 10px 20px 10px 10px;
 	margin-top: 20px;
 	text-align: right;
 	font-size: 14px;
-	font-weight: 100;
 	color: white;
 	background-color: #48526a;
 }
