--- a/src/header.css
+++ b/src/header.css
@@ -1,18 +1,26 @@
-.header {
-  background-color: #373F51;
-  min-height: 70px;
+.header-main {
+  /*background-color: #373F51;*/
+  background-image: url('./pictures/central.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 1100px;
+  min-height: 300px;
   padding: 20px 20px 0px 20px;
   color: white;
-  font-family: Arial;
   font-size: 26px;
   text-align: left;
 }
 
+#header-name {
+	padding-top: 20px;
+}
+
 .header-links {
 	float: right;
-	padding-right: 10px;
+	padding-right: 5px;
 	font-size: 14px;
-	margin-top: 8px;
+	margin-top: 100px;
+	margin-left: -25px;
 }
 
 .links {
