--- a/src/header.css
+++ b/src/header.css
@@ -7,19 +7,22 @@
   min-height: 300px;
   padding: 20px 20px 0px 20px;
   color: white;
-  font-size: 26px;
-  text-align: left;
 }
 
 #header-name {
-	padding-top: 145px;
+  	text-align: left;
+  	font-size: 32px;
+  	font-weight: 500;
+	padding-top: 155px;
 }
 
 .header-links {
+	padding-top: 0;
+	margin-top: 0;
 	float: right;
 	padding-right: 5px;
 	font-size: 14px;
-	margin-top: 10px;
+	font-weight: 400;
 	margin-left: -25px;
 }
 
