--- a/src/header.css
+++ b/src/header.css
@@ -20,8 +20,8 @@
 	padding-top: 0;
 	margin-top: 0;
 	float: right;
-	padding-right: 5px;
-	font-size: 14px;
+	/*padding-right: 5px;*/
+	font-size: 20px;
 	font-weight: 400;
 	margin-left: -25px;
 }
