--- a/src/intro.css
+++ b/src/intro.css
@@ -1,6 +1,7 @@
 .intro-main {
 	margin-top: 10px;
 	padding-bottom: 100px;
+	text-align: center;
 }
 
 #intro-title {
@@ -10,7 +11,8 @@
 }
 
 .intro-body {
-	float: left;
+	/*float: left;*/
+	display:inline-block;
 	text-align: center;
 	width: 30%;
 	padding: 10px;
