updated intro and about. added shading to the header picture.

--- a/src/header.css
+++ b/src/header.css
@@ -9,6 +9,11 @@
   color: white;
 }
 
+.background-tint {
+	background-color: rgba(75,50,0,.5);
+	background-blend-mode: multiply;
+}
+
 #header-name {
   	text-align: left;
   	font-size: 34px;
